Frontend application name change

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Techsessions demo</title>
+  <title>Aquele Chat</title>
 
   <base href="/"/>
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
