--- a/app/src/index.html
+++ b/app/src/index.html
@@ -7,6 +7,7 @@
 
   <base href="/"/>
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
 
   <meta name="color-scheme" content="light dark"/>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
