--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,9 +10,10 @@
   <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
 
   <meta name="color-scheme" content="light dark"/>
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
+  <meta name="description" content="Best chat ever">
 
 
   <!-- add to homescreen for ios -->
